Add context awareness to metadata resolvers instead of attempting to cache them by their responses.